<resources>
    <string name="app_name">CampusExpenses</string>
    <string name="welcome_to_expenese_manager_app">Welcome to Expenese Manager app !</string>
    <string name="next">Next</string>
    <string name="register_account">Register Account</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="or_using">or using</string>
    <string name="confirm_password">Confirm password\n</string>
    <string name="logout">Logout</string>
    <string name="what_can_we_call_you">What can we call you</string>
    <string name="display_name">Display Name</string>
    <string name="your_name">Your Name</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the Terms of Service</string>
    <string name="submit">Submit</string>
    <string name="categories">Categories</string>
    <string name="transaction">Transaction</string>
    <string name="analysis">Analysis</string>
    <string name="home">Home</string>
    <string name="last_month">Last Month</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="custom_range">Custom Range</string>
    <string name="date_range_error">Date range is not selected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accountBudget">Budget</string>
    <string name="budget_s_name">Budget\'s Name</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="budget_description">Description</string>
    <string name="no_categories_available">No categories available</string>
    <string name="no_budgets_available">No Account Budgets available</string>
    <string name="settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="injson">__inJson__</string>
    <string name="notification">Notification</string>
    <string name="we_will_remind_you_about_your_budget">We will remind you about your Budget</string>
    <string name="sync_your_data">Sync your data</string>
    <string name="sync">Sync</string>
    <string name="export">Export</string>
    <string name="export_your_data_to_csv">Export your data to csv</string>
    <string name="guest">Guest</string>
    <string name="feedback">Feedback</string>
    <string name="give_us_feedback_to_help_us_grow_better">Give us feedback to help us grow better</string>
    <string name="about">About</string>
    <string name="vnd">VND</string>
    <string name="previous_period">Previous Period</string>
    <string name="this_month">This Month</string>
    <string name="next_period">Next Period</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="disable_notifications">Disable Notifications</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="information_about_app_and_us">Information about app and us</string>
    <string name="nguyen_thanh_vinh">Nguyen Thanh Vinh</string>
    <string name="developed_by">Developed by</string>
    <string name="budget_wise_project">Budget Wise Project</string>
    <string name="nguyen_ngoc_duy_hung">Nguyen Ngoc Duy Hung</string>
    <string name="nguyen_phu_hung">Nguyen Phu Hung</string>
    <string name="vu_huy_hoang">Vu Huy Hoang</string>
    <string name="view_this_project_on">View this project on</string>
    <string name="log_out_of_this_account">Log out of this account</string>
    <string name="thanks_for_using">Thanks for using!</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="create_budget">Create Budget</string>
    <string name="income">Income</string>
    <string name="year_month_day">Year/Month/Day</string>
    <string name="transfer">Transfer</string>
    <string name="outcome">Outcome</string>
    <string name="enter_amount">Enter amount</string>
    <string name="description">Enter description</string>
    <string name="amount_of_money">Amount of money</string>
    <string name="remain_of_money">remain of money</string>
    <string name="select_category">Select category</string>
    <string name="enter_total_amount">Enter total amount</string>
    <string name="enter_remain_amount">Enter remain amount</string>
    <string name="category">Category\n</string>
    <string name="select_account">Select account</string>
    <string name="select_budget">Select accountBudget</string>
    <string name="category_name">Category Name</string>
    <string name="account_balance">balance</string>
    <string name="select_to_account">Select To Account</string>
    <string name="to_account">To Account</string>
    <string name="add">Add</string>
    <string name="all">Get all</string>
    <string name="account">Account</string>
    <string name="transaction_type">transaction type</string>
    <string name="no_transactions_found">No transactions found</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="chart_for_category">Chart for category</string>
    <string name="account_name">Account name</string>
    <string name="view_all">View All</string>
    <string name="no_accounts_yet_add_one">No accounts yet. Add one!</string>
    <string name="accounts">Accounts</string>
    <string name="initial_balance">Initial Balance</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_date_enddate">start date - enddate</string>
    <string name="start_date_end_date">start date - end date</string>
    <string name="edit_budget">Edit accountBudget</string>
    <string name="remaining_amount">Remaining Amount</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="category_budget">Category Budget</string>
    <string name="select_your_birthday">Select your birthday</string>
</resources>