<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_currency"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/chk_VND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vnd"
        android:textSize="16sp"/>

    <CheckBox
        android:id="@+id/chk_USD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd"
        android:textSize="16sp"/>

    <CheckBox
        android:id="@+id/chk_EUR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur"
        android:textSize="16sp"/>
</LinearLayout>