<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ImageView
    android:layout_width="200sp"
    android:layout_height="200sp"
    android:src="@drawable/register"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="50dp"
    tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_account"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"/>
<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/user_name"-->
<!--        android:importantForAutofill="no"-->
<!--        android:id="@+id/edtUserName"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:textColorHint="@android:color/darker_gray"-->
<!--        android:inputType="textPersonName"/>-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:autofillHints="false"
        android:id="@+id/edtEmail"
        android:layout_marginTop="30dp"
        android:inputType=""
        android:textColorHint="@android:color/darker_gray"
        tools:ignore="TextFields"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:id="@+id/edtPassword"
        android:layout_marginTop="30dp"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:id="@+id/edtConfirmPassword"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_using"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageButton
            android:id="@+id/btnGoogleLogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/google"
            android:background="?attr/selectableItemBackgroundBorderless"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnRegister"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnLogin"/>
</LinearLayout>