<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/btn_back"
    android:src="@drawable/ic_leftbackarror"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:layout_marginStart="10dp"
    android:layout_marginTop="15dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_settings"
        android:text="@string/settings"
        app:layout_constraintLeft_toRightOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"/>
    <ImageView
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:id="@+id/img_avatar"
        android:src="@drawable/ic_guest"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_displayName"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:text="@string/guest"
        app:layout_constraintStart_toEndOf="@id/img_avatar"
        app:layout_constraintTop_toTopOf="@id/img_avatar"
        app:layout_constraintBottom_toTopOf="@id/anchor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/anchor"
        app:layout_constraintStart_toEndOf="@id/img_avatar"
        app:layout_constraintTop_toTopOf="@id/img_avatar"
        app:layout_constraintBottom_toBottomOf="@id/img_avatar"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/txt_displayName"
        app:layout_constraintStart_toEndOf="@id/img_avatar"
        app:layout_constraintBottom_toBottomOf="@id/img_avatar"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_email"
        android:text=""
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/txt_displayName"
        app:layout_constraintStart_toEndOf="@id/img_avatar"
        app:layout_constraintBottom_toBottomOf="@id/img_avatar"
        android:layout_marginBottom="10dp"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_currency"
        android:src="@drawable/ic_currency"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/img_avatar"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_currency"
        android:text="@string/currency"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@id/img_avatar"
        app:layout_constraintBottom_toBottomOf="@id/btn_currency"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vnd"
        android:id="@+id/txt_type_currency"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/btn_currency"
        app:layout_constraintTop_toBottomOf="@id/txt_currency"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_notif"
        android:src="@drawable/ic_notif"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/btn_currency"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_notif"
        android:text="@string/notification"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/btn_notif"
        app:layout_constraintTop_toBottomOf="@id/txt_type_currency"
        app:layout_constraintBottom_toBottomOf="@id/btn_notif"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_will_remind_you_about_your_budget"
        android:id="@+id/txt_description_notif"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/btn_notif"
        app:layout_constraintTop_toBottomOf="@id/txt_notif"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sync"
        android:src="@drawable/ic_sync"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/btn_notif"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_sync"
        android:text="@string/sync"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/btn_sync"
        app:layout_constraintTop_toBottomOf="@id/txt_description_notif"
        app:layout_constraintBottom_toBottomOf="@id/btn_sync"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_your_data"
        android:id="@+id/txt_description_sync"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/btn_sync"
        app:layout_constraintTop_toBottomOf="@id/txt_sync"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_export"
        android:src="@drawable/ic_export"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/btn_sync"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_export"
        android:text="@string/export"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/btn_export"
        app:layout_constraintTop_toBottomOf="@id/txt_description_sync"
        app:layout_constraintBottom_toBottomOf="@id/btn_export"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_your_data_to_csv"
        android:id="@+id/txt_description_export"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/btn_export"
        app:layout_constraintTop_toBottomOf="@id/txt_export"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_feedback"
        android:src="@drawable/ic_feedback"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/btn_export"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_feedback"
        android:text="@string/feedback"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/btn_feedback"
        app:layout_constraintTop_toBottomOf="@id/txt_description_export"
        app:layout_constraintBottom_toBottomOf="@id/btn_feedback"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_us_feedback_to_help_us_grow_better"
        android:id="@+id/txt_description_feedback"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/btn_feedback"
        app:layout_constraintTop_toBottomOf="@id/txt_feedback"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_about"
        android:src="@drawable/ic_about"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/btn_feedback"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_about"
        android:text="@string/about"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/btn_about"
        app:layout_constraintTop_toBottomOf="@id/txt_description_feedback"
        app:layout_constraintBottom_toBottomOf="@id/btn_about"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_about_app_and_us"
        android:id="@+id/txt_description_about"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/btn_about"
        app:layout_constraintTop_toBottomOf="@id/txt_about"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_about"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/logout"
        android:id="@+id/btn_logout"
        android:src="@drawable/ic_logout"
        android:background="?attr/selectableItemBackgroundBorderless"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_logout"
        android:text="@string/logout"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/btn_logout"
        app:layout_constraintTop_toBottomOf="@id/txt_description_about"
        app:layout_constraintBottom_toBottomOf="@id/btn_logout"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out_of_this_account"
        android:id="@+id/txt_description_logout"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/btn_logout"
        app:layout_constraintTop_toBottomOf="@id/txt_logout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
