<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="13dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/gif_registration"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:src="@drawable/registration"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/edtDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/display_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/your_name"
                android:inputType="textPersonName" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:calendarTextColor="#E69A2C"
                android:datePickerMode="calendar" />

            <CheckBox
                android:id="@+id/chkTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to_the_terms_of_service" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>