<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_back"
        android:src="@drawable/ic_leftbackarror"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
<ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:id="@+id/img_logo"
    android:src="@drawable/logo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="20dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_intro"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/budget_wise_project"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_author"
        android:text="@string/developed_by"
        app:layout_constraintTop_toBottomOf="@+id/txt_intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="15sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_vinh"
        android:text="@string/nguyen_thanh_vinh"
        app:layout_constraintTop_toBottomOf="@+id/txt_author"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="10sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        tools:ignore="SmallSp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_hwng"
        android:text="@string/nguyen_ngoc_duy_hung"
        app:layout_constraintTop_toBottomOf="@+id/txt_author"
        app:layout_constraintStart_toEndOf="@+id/txt_vinh"
        app:layout_constraintEnd_toStartOf="@id/txt_hung"
        android:textSize="10sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_hung"
        android:text="@string/nguyen_phu_hung"
        app:layout_constraintTop_toBottomOf="@+id/txt_author"
        app:layout_constraintStart_toEndOf="@+id/txt_hwng"
        app:layout_constraintEnd_toStartOf="@id/txt_hoang"
        android:textSize="10sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_hoang"
        android:text="@string/vu_huy_hoang"
        app:layout_constraintTop_toBottomOf="@+id/txt_author"
        app:layout_constraintStart_toEndOf="@+id/txt_hung"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="10sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        />
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/img_hoang"
        android:src="@drawable/ic_guest"
        app:layout_constraintTop_toBottomOf="@+id/txt_hoang"
        app:layout_constraintEnd_toEndOf="@id/txt_hoang"
        app:layout_constraintStart_toStartOf="@id/txt_hoang"/>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/img_hung"
        app:layout_constraintTop_toBottomOf="@id/txt_hung"
        app:layout_constraintEnd_toEndOf="@id/txt_hung"
        app:layout_constraintStart_toStartOf="@id/txt_hung"
        android:src="@drawable/ic_guest"/>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/img_hwng"
        app:layout_constraintTop_toBottomOf="@id/txt_hwng"
        app:layout_constraintEnd_toEndOf="@id/txt_hwng"
        app:layout_constraintStart_toStartOf="@id/txt_hwng"
        android:src="@drawable/ic_guest"/>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/img_vinh"
        app:layout_constraintTop_toBottomOf="@id/txt_vinh"
        app:layout_constraintEnd_toEndOf="@id/txt_vinh"
        app:layout_constraintStart_toStartOf="@id/txt_vinh"
        android:src="@drawable/ic_guest"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_view_this_project"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:text="@string/view_this_project_on"
        app:layout_constraintTop_toBottomOf="@id/img_hung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_github"
        android:src="@drawable/ic_github"
        app:layout_constraintTop_toBottomOf="@id/txt_view_this_project"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/thanks_for_using"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>